--- a/style.css
+++ b/style.css
@@ -86,13 +86,13 @@ html,body{
 #mycarousel1{
 	margin-left:5px;
 }
-img{
+.item>img{
 	height:400;
 	width:400;
     background-repeat:no-repeat;
     background-size:cover;
 }
-img:hover{
+.item>img:hover{
 	border-radius: 100%;
 	transition:2s;
 }
@@ -114,6 +114,7 @@ img:hover{
 	background:rgba(183,202,191,0.8);
 	width:100%;
 	height:450px;
+	margin-top:20px;
 }
 .contact>h3{
 	text-transform:uppercase;
@@ -123,7 +124,7 @@ i{
 	color:rgb(19,125,86);
 	margin-left:10px;
 }
-.col-md-offset-2>p{
+.ala>p{
 	color:rgb(19,125,86);
 }
 .col-md-offset-4>p{
@@ -157,4 +158,37 @@ i{
 .ter>button:hover{
 	border:2px solid rgb(51,0,0);
 	border-radius: none;
+}
+.abt>.col-md-6{
+	border:1px solid rgb(206,204,188);
+	height:40px;
+	overflow:hidden;
+	text-align:center;
+}
+.abt>.active{
+	background:rgb(196,175,38);
+	color:white;
+	border:none;
+}
+.abt>.bod>p {
+	border:1px solid rgb(183,182,170);
+	background: rgb(201,198,183);
+	height:40px;
+	text-align: center;
+	padding-top:10px;
+}
+.ime>img{
+	height:200px;
+	width:100%;
+	position:center;
+}
+.aha h3{
+	border-left:4px solid rgb(196,175,38);
+}
+.aha>.des{
+	color:black;
+	font-style: italic;
+}
+.aha>.bon{
+	margin-left:50%;
 }
