--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ html,body{
 	color:rgb(228,232,242);
 	letter-spacing: 0.3em;
 	display:none;
+	position:center;
 }
 .middle>.transparent>.row>.col-md-offset-5>p{
 	font-size:16px;
@@ -113,12 +114,13 @@ html,body{
 #contact-us{
 	background:rgba(183,202,191,0.8);
 	width:100%;
-	height:450px;
+	height:500px;
 	margin-top:20px;
 }
 .contact>h3{
 	text-transform:uppercase;
 	font-weight:bold;
+	text-align:center;
 }
 i{
 	color:rgb(19,125,86);
@@ -128,7 +130,8 @@ i{
 	color:rgb(19,125,86);
 }
 .col-md-offset-4>p{
-	margin-left:70px;
+	margin-left:25%;
+	margin-right:25%;
 }
 .col-md-offset-2>input{
 	padding-left: 10px;
@@ -137,12 +140,14 @@ i{
 .grt>textarea{
 	height:100px;
 	padding:10px;
-	width:400px; 
+	width:50%;
 	border:1px solid rgb(96,84,155);
 }
 .in>input{
 	padding-left:10px;
 	height:30px;
+	width:50%;
+	margin-top:5px;
 	border:1px solid rgb(96,84,155);
 }
 .grt>textarea:hover{
@@ -192,3 +197,336 @@ i{
 .aha>.bon{
 	margin-left:50%;
 }
+
+@media  (max-width:476px){
+	.middle>.transparent>.row>.col-md-9>h1{
+		text-align:center;
+		font-size:22px;
+		letter-spacing:0.1em;
+	}
+	.middle>.transparent>.row>.col-md-offset-5>p{
+		font-size:15px;
+		text-align:center;
+	}
+	.col-md-offset-5>button{
+		width:30%;
+		font-size:12px;
+		letter-spacing: 0.1em;
+		margin-left:35%;
+		margin-right:35%;
+	}
+	.scam>h2{
+		text-align:center;
+	}
+	.scam>section{
+		margin-left:40%;
+	}
+	.scam>p{
+		text-align:center;
+	}
+	.contact>h3{
+		text-align:center;
+	}
+	.ala>i{
+		margin-left:49%;
+	}
+	.ala>p{
+		text-align:center;
+	}
+	#contact-us{
+		height:600px;
+	}
+	.in>input{
+		margin-left:25%;
+		margin-top:5px;
+		margin-right:25%;
+		width:50%;
+	}
+	.grt>textarea{
+		width:90%;
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.ter>button{
+		margin-left:25%;
+		margin-right:25%;
+	}
+	.abt>.col-md-6,.abt>.bod>p{
+		width:90%;
+		margin-right:5%;
+		margin-left:5%;
+	}
+	.ime>img{
+		width:90%;
+		margin-right:5%;
+		margin-left:5%;
+	}
+	.aha >h3{
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.aha>p{
+		margin-left:5%;
+		margin-right:1%;
+	}
+	#mycarousel1{
+		width:90%;
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.xtra>p{
+		text-align:center;
+	}
+}
+
+@media  (min-width:477px)  and (max-width:510px){
+	.middle>.transparent>.row>.col-md-9>h1{
+		text-align:center;
+		font-size:25px;
+		letter-spacing:0.2em;
+	}
+	.middle>.transparent>.row>.col-md-offset-5>p{
+		font-size:15px;
+		text-align:center;
+	}
+	.col-md-offset-5>button{
+		width:28%;
+		font-size:15px;
+		letter-spacing: 0.1em;
+		margin-left:36%;
+		margin-right:36%;
+	}
+	.scam>h2{
+		text-align:center;
+	}
+	.scam>section{
+		margin-left:40%;
+	}
+	.scam>p{
+		text-align:center;
+	}
+	.contact>h3{
+		text-align:center;
+	}
+	.ala>i{
+		margin-left:49%;
+	}
+	.ala>p{
+		text-align:center;
+	}
+	#contact-us{
+		height:600px;
+	}
+	.xtra>p{
+		text-align:center;
+	}
+	.in>input{
+		margin-left:25%;
+		margin-top:5px;
+		margin-right:25%;
+		width:50%;
+	}
+	.grt>textarea{
+		width:90%;
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.ter>button{
+		margin-left:25%;
+		margin-right:25%;
+	}
+	.abt>.col-md-6,.abt>.bod>p{
+		width:90%;
+		margin-right:5%;
+		margin-left:5%;
+	}
+	.ime>img{
+		width:90%;
+		margin-right:5%;
+		margin-left:5%;
+	}
+	.aha >h3{
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.aha>p{
+		margin-left:5%;
+		margin-right:1%;
+	}
+	#mycarousel1{
+		width:90%;
+		margin-left:10%;
+		margin-right:5%;
+	}
+}
+
+@media  (min-width:511px)  and (max-width:610px){
+	.middle>.transparent>.row>.col-md-9>h1{
+		text-align:center;
+		letter-spacing:0.2em;
+	}
+	.middle>.transparent>.row>.col-md-offset-5>p{
+		font-size:15px;
+		text-align:center;
+	}
+	.col-md-offset-5>button{
+		width:24%;
+		font-size:15px;
+		letter-spacing: 0.1em;
+		margin-left:38%;
+		margin-right:38%;
+	}
+	.scam>h2{
+		text-align:center;
+	}
+	.scam>section{
+		margin-left:40%;
+	}
+	.scam>p{
+		text-align:center;
+	}
+	.contact>h3{
+		text-align:center;
+	}
+	.ala>i{
+		margin-left:49%;
+	}
+	.ala>p{
+		text-align:center;
+	}
+	#contact-us{
+		height:600px;
+	}
+	.xtra>p{
+		text-align:center;
+	}
+	.in>input{
+		margin-left:25%;
+		margin-top:5px;
+		margin-right:25%;
+		width:50%;
+	}
+	.grt>textarea{
+		width:90%;
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.ter>button{
+		margin-left:25%;
+		margin-right:25%;
+	}
+	.abt>.col-md-6,.abt>.bod>p{
+		width:90%;
+		margin-right:5%;
+		margin-left:5%;
+	}
+	.ime>img{
+		width:90%;
+		margin-right:5%;
+		margin-left:5%;
+	}
+	.aha >h3{
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.aha>p{
+		margin-left:5%;
+		margin-right:1%;
+	}
+	#mycarousel1{
+		width:90%;
+		margin-left:10%;
+		margin-right:5%;
+	}
+}
+
+@media  (min-width:611px)  and (max-width:820px){
+	.middle>.transparent>.row>.col-md-9>h1{
+		text-align:center;
+		letter-spacing:0.2em;
+	}
+	.middle>.transparent>.row>.col-md-offset-5>p{
+		font-size:15px;
+		text-align:center;
+	}
+	.col-md-offset-5>button{
+		width:20%;
+		font-size:15px;
+		letter-spacing: 0.1em;
+		margin-left:42%;
+		margin-right:42%;
+	}
+	.scam>h2{
+		text-align:center;
+	}
+	.scam>p{
+		text-align:center;
+	}
+	.scam>section{
+		margin-left:45%;
+	}
+	.contact>h3{
+		text-align:center;
+	}
+	.ala>i{
+		margin-left:49%;
+	}
+	.ala>p{
+		text-align:center;
+	}
+	#contact-us{
+		height:600px;
+	}
+	.xtra>p{
+		text-align:center;
+	}
+	.in>input{
+		margin-left:25%;
+		margin-top:5px;
+		margin-right:25%;
+		width:50%;
+	}
+	.grt>textarea{
+		width:90%;
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.ter>button{
+		margin-left:25%;
+		margin-right:25%;
+	}
+	.abt>.col-md-6,.abt>.bod>p{
+		width:90%;
+		margin-right:5%;
+		margin-left:5%;
+	}
+	.ime>img{
+		width:90%;
+		margin-right:5%;
+		margin-left:5%;
+	}
+	.aha >h3{
+		margin-left:5%;
+		margin-right:5%;
+	}
+	.aha>p{
+		margin-left:5%;
+		margin-right:1%;
+	}
+	#mycarousel1{
+		margin-left:20%;
+		margin-right:5%;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
