--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ html,body{
 	margin-top:15px;
 }
 #contact-us{
-	background:rgba(183,202,191,0.8);
+	background:#34495e;
 	width:100%;
 	height:500px;
 	margin-top:20px;
@@ -123,11 +123,11 @@ html,body{
 	text-align:center;
 }
 i{
-	color:rgb(19,125,86);
+	color:#27ae60;
 	margin-left:10px;
 }
 .ala>p{
-	color:rgb(19,125,86);
+	color:#27ae60;
 }
 .col-md-offset-4>p{
 	margin-left:25%;
